--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <label for="senha">Senha:</label>
         <input type="password" id="senha" class="form-control" placeholder="Digite sua senha" required>
 
-        
+        <label for="cpf">CPF:</label>
+        <input type="text" id="cpf" class="form-control" placeholder="Digite seu CPF" required>
 
         <label for="dataNascimento">Data de Nascimento:</label>
         <input type="date" id="dataNascimento" class="form-control" required>
