--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
         <input type="text" id="logradouro" class="form-control" placeholder="Sua rua irá aparecer aqui">
 
         <label for="numero">N.°:</label>
-        <input type="text" id="numero" class="form-control" placeholder="Seu N.° irá aparecer aqui">
+        <input type="text" id="numero" class="form-control" placeholder="Digite seu N.° de casa aqui">
 
         <label for="bairro">Bairro:</label>
         <input type="text" id="bairro" class="form-control" placeholder="Seu Bairro irá aparecer aqui">
 
         <label for="complemento">Complemento:</label>
-        <input type="text" id="complemento" class="form-control" placeholder="Seu complemento irá aparecer aqui">
+        <input type="text" id="complemento" class="form-control" placeholder="Digite seu complemento aqui">
 
         <label for="localidade">Cidade:</label>
         <input type="text" id="localidade" class="form-control" placeholder="Sua cidade irá aparecer aqui">
